CSS/beerCatalogue.css
body {
  height: 100vh;
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  overflow-x: hidden;

  background-image: url(../IMAGES/Background_yellow.svg);
  background-size: cover;
  background-repeat: no-repeat;
}

/* SEARCH BAR */
.searchBar {
  width: 100vw;
  height: 15vw;
  margin: 0;
  padding: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  position: sticky;
  top: 0px;
  z-index: 1;
  background-color: #ab4300;
  filter: drop-shadow(0 2mm 4mm rgba(207, 207, 207, 0.529));
}
.searchBar > input {
  width: 87%;
  height: 70%;
  background-image: url(../IMAGES/search.png);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: right 10px top 0px;
  background-color: white;
  border-radius: 10px;
  border: 5px solid white;
}

/* BEER RESULTS */
.beerResults {
  height: 100vh;
  display: flex;
  align-items: center;
  flex-direction: column;
  overflow-y: scroll;
}

.noResult {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: "Shadows Into Light", cursive;
  font-size: 2em;
}

.noResult > p {
  font-family: "Snippet", sans-serif;
}

/* EACH INDIVIDUAL BEER "PANE" */
.beerDiv {
  width: 90vw;
  height: 50vw;
  display: grid;
  grid-template-columns: 1% 99%;
  margin: 3.3vw;
  background-color: white;
  opacity: 90%;
  border-radius: 15px;
  font-family: "Snippet", sans-serif;
  filter: drop-shadow(0 0 0.3rem #00000030);
  color: #ab4300;
}

.beerDiv > div:last-child {
  display: grid;
  grid-template-columns: 40% 60%;
  height: 100%;
}

.beerDiv > div:last-child > div:first-child {
  height: 50vw;
  display: flex;
  justify-content: center;
  align-items: center;
}

.beerDiv > div:last-child > div:first-child img {
  height: 70%;
}

.beerDiv > div:last-child > div:last-child {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 85%;
}

.beerDiv > div:last-child > div:last-child > h3 {
  font-family: "Shadows Into Light", cursive;
  letter-spacing: 2px;
  line-height: 1em;
  margin: 5px 0px 5px 0px;
}

/* .beerDiv > div > h3 {
  font-family: "Shadows Into Light", cursive;
  letter-spacing: 2px;
  line-height: 0em;
} */
/* .beerDiv > div:first-child {

} */
/* .beerDiv > div:first-child > img {
  height: 70%;
} */

/* HEARTS */
.filled {
  height: 10vw;
  width: 10vw;
  position: relative;
  left: 77vw;
  top: 5%;
  background-image: url(../IMAGES/heart-filled.png);
  background-size: contain;
  background-repeat: no-repeat;
}
.notfilled {
  height: 10vw;
  width: 10vw;
  position: relative;
  left: 77vw;
  top: 5%;
  background-image: url(../IMAGES/heart-nofilled.png);
  background-size: contain;
  background-repeat: no-repeat;
}

/* RATING (STARS) */
.rating {
  display: inline-block;
  overflow: hidden;
  font-size: 6.1vw;
  color: rgb(0, 0, 0);
}
.norating {
  font-style: italic;
  font-family: "Snippet", sans-serif;
}

.starDivPopup .norating {
  height: 17vw;
  display: flex;
  justify-content: center;
  align-items: center;
}

#favorites {
  font-family: "Shadows Into Light", cursive;
  color: #eddc46;
  font-size: 5vh;
  font-weight: 100;
}

/* ONE BEER POPUP */
.oneBeerPopUp {
  background-color: white;
  width: 100vw;
  height: 100vh;
  position: absolute;
  top: 0;
  z-index: 5;
  background-image: url(../IMAGES/Background_red.svg);
  background-size: cover;
  background-repeat: no-repeat;
}

.oneBeerPopUpHeader {
  display: flex;
  align-items: center;
  height: 10vh;
  background-color: #ab4300;
  position: sticky;
  top: 0;
}

.oneBeerPopUpHeader img:first-child {
  height: 50%;
}

.oneBeerPopUpHeader img:last-child {
  height: 60%;
  margin-left: auto;
  padding-right: 3%;
}

.oneBeerPopUpInfo {
  height: 35vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  font-family: "Snippet", sans-serif;
}

.oneBeerPopUpInfo img {
  height: 70%;
}

.starDivPopup {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: auto;
  margin-right: auto;
  width: 50vw;
}

.reviewBtn {
  margin-left: auto;
  margin-right: auto;
  width: 30vw;
  background-color: #ab4300;
  color: white;
  padding: 4vw;
  border-radius: 15px;
  font-family: "Snippet", sans-serif;
  text-align: center;
}

